<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grocery Manager</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="hint_grocery_name">Enter Grocery Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
</resources>
