<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="start"
    android:background="@color/background_light_purple">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textColorHint="@color/gray"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="12dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="12dp"
        android:backgroundTint="@color/button_purple"
        android:textColor="@color/button_text_white"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="12dp"
        android:backgroundTint="@color/button_purple"
        android:textColor="@color/button_text_white"
        android:layout_gravity="start" />

</LinearLayout>
